Try to deal with Windows spaces in directories issue
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1080383 13f79535-47bb-0310-9956-ffa450edef68